<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="8dp"
    android:paddingVertical="4dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="48dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="?attr/colorPrimaryContainer">

        <TextView
            android:id="@+id/messageContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="15sp"
            android:textColor="?attr/colorOnPrimaryContainer"/>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>
