...
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:background="@drawable/wave_ring_recording"
                    android:visibility="gone"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/activationButton"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    app:fabCustomSize="120dp"
                    app:maxImageSize="56dp"
                    app:tint="?attr/colorOnPrimaryContainer"
...
                    app:tint="?attr/colorPrimary"
                    android:importantForAccessibility="no"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/settingsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
...
